--- a/.htaccess
+++ b/.htaccess
@@ -1,22 +1,22 @@
 #啟用傳輸壓縮
 #用來代替上方的原有壓縮方式
-AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css text/javascript application/x-javascript
+#AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css text/javascript application/x-javascript
 
 #伺服端設定靜態資源到期日
-<IfModule mod_expires.c>
-    ExpiresActive On
-    # Default directive
-    #ExpiresDefault "access plus 1 month"
-    # My favicon
-    ExpiresByType image/x-icon "access plus 1 year"
-    ExpiresByType text/css "access plus 1 week"
-    ExpiresByType text/javascript "access plus 1 week"
-    ExpiresByType application/x-javascript "access plus 1 week"
-    ExpiresByType image/gif "access  plus 1 week"
-    ExpiresByType image/jpg "access plus 1 week"
-    ExpiresByType image/jpeg "access plus 1 week"
-    ExpiresByType image/png "access plus 1 week"
-</IfModule>
+#<IfModule mod_expires.c>
+#    ExpiresActive On
+#    # Default directive
+#    #ExpiresDefault "access plus 1 month"
+#    # My favicon
+#    ExpiresByType image/x-icon "access plus 1 year"
+#    ExpiresByType text/css "access plus 1 week"
+#    ExpiresByType text/javascript "access plus 1 week"
+#    ExpiresByType application/x-javascript "access plus 1 week"
+#    ExpiresByType image/gif "access  plus 1 week"
+#    ExpiresByType image/jpg "access plus 1 week"
+#    ExpiresByType image/jpeg "access plus 1 week"
+#    ExpiresByType image/png "access plus 1 week"
+#</IfModule>
 
 Options ExecCGI Includes IncludesNOEXEC SymLinksIfOwnerMatch -Indexes
 RewriteEngine On
